<package format="2">
	<name>vertical_stereo</name>
	<version>0.0.1</version>
	<description>
		  rotates the images from pointgrey camera and modifies the camera parameters to enable vetical stereo
	</description>
	<maintainer email="arulselvam@uni-bonn.de">Arul Selvam</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
        <depend>rosbag</depend>
	<depend>cv_bridge</depend>
	<depend>image_transport</depend>
</package>